--- a/app/src/main/res/layout/fragment_personagem.xml
+++ b/app/src/main/res/layout/fragment_personagem.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.PersonagemActivity">
+    tools:context=".ui.activity.antigos.PersonagemActivity">
 
     <Button
         android:id="@+id/btCharMap"
