--- a/app/src/main/res/xml/fragment_splashscreen_scene.xml
+++ b/app/src/main/res/xml/fragment_splashscreen_scene.xml
@@ -11,6 +11,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="800dp" />
+        <Constraint
+            android:id="@+id/tvSplash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end" >
@@ -40,5 +48,7 @@
                 android:scaleY="1.0" />
         </KeyFrameSet>
     </Transition>
+
+
 
 </MotionScene>
