--- a/app/src/main/res/layout/fragment_onboarding_second.xml
+++ b/app/src/main/res/layout/fragment_onboarding_second.xml
@@ -12,25 +12,51 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView3"
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/gifImageview"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/onboarding3"
-            app:layout_constraintBottom_toTopOf="@+id/guideline6"
+            android:src="@drawable/screen"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline6"
+        <TextView
+            android:id="@+id/textView"
+            style="?titleStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="555dp" />
+            android:layout_marginTop="320dp"
+            android:text="Conquiste os castelos do mapa"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="305dp"
+            android:layout_height="147dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/textView2"
+            style="?titleStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Not another RPG"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
