--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
     </style>
 
     <style name="Widget.Title" parent = "Widget.AppCompat.TextView">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#ffffff</item>
         <item name="android:textAppearance">@style/TitleApp</item>
     </style>
 
