--- a/app/src/main/res/layout/fragment_onboarding_third.xml
+++ b/app/src/main/res/layout/fragment_onboarding_third.xml
@@ -18,13 +18,13 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_end="176dp" />
 
-        <ImageView
-            android:id="@+id/imageView4"
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/gifImageview3"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/onboarding4"
-            app:layout_constraintBottom_toTopOf="@+id/guideline7"
+            android:src="@drawable/screen"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,13 +36,36 @@
             style="?titleStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="44dp"
             android:text="Desbrave as masmorras e ache as recompensas!"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/gifImageview3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintTop_toTopOf="@+id/guideline7"
+            app:layout_constraintVertical_bias="0.445" />
+
+        <TextView
+            android:id="@+id/tvNome1"
+            style="?nomeStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="115dp"
+            android:text="Not another RPG"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.581"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageView4" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="187dp"
+            android:layout_height="163dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.544"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logosplash" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
