--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+<!--    <color name="purple_200">#FFBB86FC</color>-->
+    <color name="purple_200">#242446</color>
+
+<!--    <color name="purple_500">#FF6200EE</color>-->
+<!--    nome projeto inicio tela-->
+    <color name="purple_500">#040405</color>
+
+<!--    <color name="purple_700">#FF3700B3</color>-->
+    <color name="purple_700">#ccc4c4</color>
+
+<!--    <color name="teal_200">#FF03DAC5</color>-->
+<!--    botão/ -->
+    <color name="teal_200">#c47414</color>
+
+<!--    <color name="teal_700">#FF018786</color>-->
+    <color name="teal_700">#a03c70</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!--    <color name="brand_dark_gray_2">#2D2F31</color>-->
+<!--    tela splash background / background emvolta botão e dots/ background aplicaçãogeral-->
     <color name="brand_dark_gray_2">#2D2F31</color>
 
 </resources>
