--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,10 +13,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
+
         <item name="backgroundColor">@color/brand_dark_gray_2</item>
+<!--        <item name="backgroundColor">@color/brand_dark_gray_2</item>-->
 
         <item name="primaryButtonStyle">@style/Widget.MaterialComponents.Button.OutlinedButton.PrimaryButton</item>
         <item name="titleStyle"> @style/Widget.Title</item>
+        <item name="nomeStyle"> @style/Widget.Nome</item>
+
+        <item name="viewPagerDotsStyle">@style/Widget.ViewPageIndicator</item>
 
     </style>
 </resources>
