--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -26,4 +26,14 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="NomeApp">
+        <item name="android:textStyle">normal</item>
+        <item name="fontFamily">@font/newtegomin_regular</item>
+        <item name="android:fontFamily">@font/newtegomin_regular</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textSize">32dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
 </resources>
