--- a/app/src/main/res/xml/fragment_splashscreen_scene.xml
+++ b/app/src/main/res/xml/fragment_splashscreen_scene.xml
@@ -46,6 +46,22 @@
                 app:framePosition="55"
                 android:scaleX="1.0"
                 android:scaleY="1.0" />
+
+            <KeyAttribute
+                app:motionTarget="@+id/tvSplash"
+                app:framePosition="0"
+                android:rotation="180" />
+            <KeyAttribute
+                app:motionTarget="@+id/tvSplash"
+                app:framePosition="60"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:rotation="0" />
+            <KeyAttribute
+                app:motionTarget="@+id/tvSplash"
+                app:framePosition="55"
+                android:scaleX="1.0"
+                android:scaleY="1.0" />
         </KeyFrameSet>
     </Transition>
 
