--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,9 +2,12 @@
 <resources>
 
     <attr format="reference" name="primaryButtonStyle"/>
+    <attr format="reference" name="secundaryButtonStyle"/>
     <attr format="reference" name="titleStyle"/>
     <attr format="reference" name="nomeStyle"/>
-    nomeStyle
+    <attr format="reference" name="colorInicio"/>
+    <attr format="reference" name="placeholderStyle"/>
+
 
     <attr format="reference" name="viewPagerDotsStyle"/>
 
