--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -10,9 +10,9 @@
         <item name="android:textAllCaps">true</item>
     </style>
     <style name="Textbutton">
-        <item name="fontFamily">@font/newtegomin_regular</item>
-        <item name="android:fontFamily">@font/newtegomin_regular</item>
-        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/lohengrin</item>
+        <item name="android:fontFamily">@font/lohengrin</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:letterSpacing">0.1</item>
     </style>
 
@@ -28,12 +28,15 @@
 
     <style name="NomeApp">
         <item name="android:textStyle">normal</item>
-        <item name="fontFamily">@font/newtegomin_regular</item>
-        <item name="android:fontFamily">@font/newtegomin_regular</item>
+        <item name="fontFamily">@font/caeldera</item>
+        <item name="android:fontFamily">@font/caeldera</item>
         <item name="android:letterSpacing">0.01</item>
         <item name="android:textSize">32dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAlignment">center</item>
+
     </style>
+
+
 
 </resources>
