--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -28,8 +28,8 @@
 
     <style name="NomeApp">
         <item name="android:textStyle">normal</item>
-        <item name="fontFamily">@font/caeldera</item>
-        <item name="android:fontFamily">@font/caeldera</item>
+        <item name="fontFamily">@font/gomarice_omotenashi_2</item>
+        <item name="android:fontFamily">@font/gomarice_omotenashi_2</item>
         <item name="android:letterSpacing">0.01</item>
         <item name="android:textSize">32dp</item>
         <item name="android:textAllCaps">false</item>
