--- a/app/src/main/res/layout/fragment_onboarding_first.xml
+++ b/app/src/main/res/layout/fragment_onboarding_first.xml
@@ -51,7 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="116dp"
-            android:text="Not another rpg"
+            android:text="Not another RPG"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.519"
