--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?colorOnPrimary">
 
 
     <ImageView
@@ -24,8 +25,11 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:fontFamily="@font/lohengrin"
         android:hint="@string/hint_cadastro_email"
         android:inputType="textEmailAddress"
+        android:letterSpacing="0.2"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivCadastroLogo" />
@@ -38,8 +42,11 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:fontFamily="@font/lohengrin"
         android:hint="@string/hint_cadastro_senha"
         android:inputType="textPassword"
+        android:letterSpacing="0.2"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmailCadastro" />
@@ -52,14 +59,18 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:fontFamily="@font/lohengrin"
         android:hint="@string/hint_cadastro_senha_confirma"
         android:inputType="textPassword"
+        android:letterSpacing="0.2"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSenhaCadastro" />
 
     <Button
         android:id="@+id/btCadastroConfirma"
+        style="?primaryButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -73,6 +84,7 @@
 
     <Button
         android:id="@+id/btCadastroVolta"
+        style="?voltarButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
