--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?colorOnPrimary"
     tools:context=".ui.activity.antigos.HomeActivity">
 
     <ImageView
@@ -18,6 +19,7 @@
 
     <Button
         android:id="@+id/btPersonagem1"
+        style="?primaryButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -31,6 +33,7 @@
 
     <Button
         android:id="@+id/btPersonagem2"
+        style="?primaryButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -43,6 +46,7 @@
 
     <Button
         android:id="@+id/btPersonagem3"
+        style="?primaryButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
