--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorInicio">@color/amareloInicio</item>
+        <item name="colorVoltar">@color/amareloVoltar</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -19,7 +20,8 @@
 <!--        <item name="backgroundColor">@color/brand_dark_gray_2</item>-->
 
         <item name="primaryButtonStyle">@style/Widget.MaterialComponents.Button.OutlinedButton.PrimaryButton</item>
-        <item name="secundaryButtonStyle">@style/Widget.MaterialComponents.Button.OutlinedButton.SecundaryButton</item>
+        <item name="secundaryButtonStyle">@style/Widget.MaterialComponents.Button.OutlinedButton.SecondaryButton</item>
+        <item name="voltarButtonStyle">@style/Widget.MaterialComponents.Button.OutlinedButton.VoltarButton</item>
         <item name="titleStyle"> @style/Widget.Title</item>
         <item name="nomeStyle"> @style/Widget.Nome</item>
 
